Get revealed cells feature
