# src/main/java/com/codeonblue/minesweeper/dto/CellReveledResponse.java
@@ -1,0 +1,17 @@
+package com.codeonblue.minesweeper.dto;
+
+import java.util.HashMap;
+import java.util.Map;
+
+public class CellReveledResponse {
+
+    private Map<String, String> reveledCells = new HashMap<>();
+
+    public Map<String, String> getReveledCells() {
+        return reveledCells;
+    }
+
+    public void setReveledCells(Map<String, String> reveledCells) {
+        this.reveledCells = reveledCells;
+    }
+}
